--- a/aprox.bib
+++ b/aprox.bib
@@ -171,3 +171,24 @@ keywords = {approximation algorithms, k-median, dependent rounding, facility loc
   year = 2011
 }
 
+@book{garey1979computers,
+  added-at = {2011-09-01T15:03:14.000+0200},
+  asin = {0716710455},
+  author = {Garey, M. R. and Johnson, D. S.},
+  biburl = {https://www.bibsonomy.org/bibtex/2fac25cd952418baa739dd35243b3dbdc/folke},
+  description = {Amazon.com: Computers and Intractability: A Guide to the Theory of NP-Completeness (Series of Books in the Mathematical Sciences) (9780716710455): M. R. Garey, D. S. Johnson: Books},
+  dewey = {519.4},
+  ean = {9780716710455},
+  edition = {First Edition},
+  interhash = {ff69422a0dd852de42ed1c7d63fb2bf6},
+  intrahash = {fac25cd952418baa739dd35243b3dbdc},
+  isbn = {0716710455},
+  keywords = {complexity computer np science tcs theoretical},
+  publisher = {W. H. Freeman},
+  timestamp = {2011-09-01T15:03:14.000+0200},
+  title = {Computers and Intractability: A Guide to the Theory of NP-Completeness (Series of Books in the Mathematical Sciences)},
+  url = {http://www.amazon.com/Computers-Intractability-NP-Completeness-Mathematical-Sciences/dp/0716710455},
+  year = 1979
+}
+
+
