--- a/main.tex
+++ b/main.tex
@@ -75,7 +75,7 @@ Este é o projeto de pesquisa do aluno de graduação João Guilherme Alves Sant
 
 \section{Introdução}
 
-Ao longo do estudo da computação, nos deparamos com significativas dificuldades computacionais na resolução de certos problemas, especialmente em muitos cenários de otimização nos quais buscamos minimizar ou maximizar uma função sobre um domínio específico. Nesse contexto, algoritmos de aproximação surgiram para que pudessemos sacrificar a otimalidade para encontrar, eficientemente, um ponto cujo valor garante uma relação pré-estabelecida com o valor ótimo.
+Ao longo do estudo da computação, nos deparamos com significativas dificuldades computacionais na resolução de certos problemas, especialmente em muitos cenários de otimização nos quais buscamos minimizar ou maximizar uma função sobre um domínio específico. Nesse contexto, algoritmos de aproximação surgiram para que pudessemos sacrificar a otimalidade para encontrar, eficientemente, uma solução cujo valor garante uma relação pré-estabelecida com o valor ótimo. Em geral, definimos o valor ótimo de uma instância $I$ de um problema como \opt($I$).
 
 Clustering são problemas cujo objetivo é agrupar objetos de maneira que objetos no mesmo cluster apresentam mais semelhanças quando comparados a objetos em clusters diferentes. Tais semelhanças serão definidas pelo problema em questão. Neste projeto, iremos estudar três problemas de clustering: $k$-centros, localização de instalações e $k$-mediana. 
 
@@ -105,8 +105,8 @@ Dentre os três problemas apresentados, esse é o que tem a maior folga entre o 
 \newpage
 \section{$k$-centros}
 
-Vamos definir alguns termos que facilitarão as explicações seguintes. Os vértices do conjunto $C \subseteq V$ de tamanho $k$ serão chamados de \emph{centros de cluster}. Os vértices de $V$ serão particionados em $k$ conjuntos chamados \emph{clusters} e cada um deles terá exatamente um centro de cluster. Um vértice estará no mesmo cluster que um centro de cluster mais próximo a ele. Cada cluster terá um \emph{raio} que é a maior distância entre o seu centro e um vértice qualquer dele. O nosso problema se resume a encontrar um conjunto $C$ que minimize o maior desses raios. Denotamos por raio$(C)$ o maior raio de um cluster induzido por $C$.\\
-Antes de começar a falar sobre algoritmos de aproximação para o problema do $k$-centros, vamos mostrar que, assumindo $P\not=\NP$, não existe algoritmo polinomial que resolva nosso problema, ou seja, vamos mostrar que nosso problema é $\NP$-difícil. Para isso, vamos definir o problema do $k$-conjunto dominante.
+Vamos definir alguns termos que facilitarão as explicações seguintes. Os vértices do conjunto $C \subseteq V$ de tamanho $k$ serão chamados \emph{centros de cluster}. Os vértices de $V$ serão particionados em $k$ conjuntos chamados \emph{clusters} e cada um deles terá exatamente um centro de cluster. Um vértice estará no mesmo cluster que um centro de cluster mais próximo a ele. Cada cluster terá um \emph{raio} que é a maior distância entre o seu centro e um vértice qualquer dele. O nosso problema se resume a encontrar um conjunto $C$ que minimize o maior desses raios. Denotamos por raio$(C)$ o maior raio de um cluster induzido por $C$.\\
+Antes de começar a falar sobre algoritmos de aproximação para o problema dos $k$-centros, vamos mostrar que, assumindo $P\not=\NP$, não existe algoritmo polinomial que resolva nosso problema, ou seja, vamos mostrar que nosso problema é $\NP$-difícil. Para isso, vamos definir o problema do $k$-conjunto dominante.
 
 \begin{definition}
     Seja $G = (V,E)$ um grafo. Um conjunto $D \subseteq V$ é chamado \emph{dominante} se, para todo vértice $u \in V \setminus D$, existe um vértice $v \in D$ tal que $uv \in E$.
@@ -122,7 +122,7 @@ Esse problema é $\NP$-completo, sendo o problema GT2 do famoso livro de Garey e
 \end{theorem}
 
 \begin{proof}
-    Suponha que exista um algoritmo $A$ que resolve o problema do $k$-centros em tempo polinomial. Seja $G = (V,E)$ um grafo e $I(G,k)$ uma instância do problema $k$-conjunto dominante. Vamos criar uma instância $I'(G',k,d)$ do problema dos $k$-centros a partir da instância I. A instância $I'$ tem grafo $G'(V,E')$ completo tal que, para todo $e \in E'$, \\
+    Suponha que exista um algoritmo $A$ que resolve o problema dos $k$-centros em tempo polinomial. Seja $G = (V,E)$ um grafo e $I(G,k)$ uma instância do problema $k$-conjunto dominante. Vamos criar uma instância $I'(G',k,d)$ do problema dos $k$-centros a partir da instância I. A instância $I'$ tem grafo $G'(V,E')$ completo tal que, para todo $e \in E'$, \\
     \[
     d(e) = \begin{cases}
             1, \text{ se } e \in E \\
@@ -158,7 +158,7 @@ O resultado acima pode ser adaptado para dar um resultado mais forte de inaproxi
     
 \newpage
 \subsection{Algoritmo guloso.}
-    Seja $G = (V,E)$ o grafo recebido nosso problema e $c_e$ o custo de uma aresta $e \in E$.
+    Seja $G = (V,E)$ o grafo recebido no problema e $d(e)$ o custo de uma aresta $e \in E$.
     Relembremos a função d$(u,S)$ que recebe um vértice $u$ e um conjunto de vértices $S$ tal que,
     \[ \text{d}(u,S) = \min_{v\in S} c_{uv}
         \]
@@ -166,7 +166,7 @@ O resultado acima pode ser adaptado para dar um resultado mais forte de inaproxi
 
     \begin{algorithm}
 		\begin{algorithmic}[1]
-			\Function{guloso}{$G,c,k$}
+			\Function{guloso}{$G,d,k$}
 			\State Escolha arbitrariamente $u \in V$.
             \State $C \gets \{u\}$.
             \While{$|C| \leq k$}
@@ -179,12 +179,12 @@ O resultado acima pode ser adaptado para dar um resultado mais forte de inaproxi
 	\end{algorithm}
     
     \begin{theorem}
-        O algoritmo \sc{guloso}$(G,c,k)$ é uma $2$-aproximação do $k$-centros.
+        O algoritmo \sc{guloso}$(G,d,k)$ é uma $2$-aproximação do $k$-centros.
     \end{theorem}
     \begin{proof}
         Primeiramente, vamos mostrar que o algoritmo é polinomial. A única linha que não é claramente polinomial é a linha $5$. Podemos calcular a distância de um conjunto de vértices para todos os outros vértices facilmente apenas com uma pequena modificação no algoritmo de Dijkstra. No começo do algoritmo, no lugar de colocar apenas um vértice na fila de prioridade com distância 0, colocamos todos os vértices do conjunto que queremos. Assim, calculamos a menor distância de todos os vértices para um vértice qualquer do conjunto desejado em tempo $O(|E|\log|V|)$, uma vez que nosso grafo é conexo. Além disso, o algoritmo tem complexidade $O(k|E|\log|V| )$.\\
         Seja $C^*$ o conjunto de centros de cluster de uma resposta ótima. Vamos mostrar que $r=$ raio$(C) \leq 2$ raio$(C^*)=r^*$. Perceba que a distância entre dois vértices quaisquer de um mesmo cluster é no máximo $2r^*$, uma vez que vale a desigualdade triangular.\\ 
-        Se em $C$ escolhermos vértices que estão, dois a dois, em cluster diferentes em $C^*$, então, no máximo, a maior distância entre um vértice qualquer e o centro do seu cluster será $2r^*$. \\
+        Se os vértices de $C$ estão, dois a dois, em cluster diferentes em $C^*$, então, no máximo, a maior distância entre um vértice qualquer e o centro do seu cluster será $2r^*$. \\
         Senão, suponha sem perda de generalidade que $C_{i-1} = \{ u_1,u_2,\ldots,u_{i-1}\}$ é o $C$ ao final da iteração $i-1$ e que todos eles estão em cluster diferentes em $C^*$. Seja $u_i$ o vértice escolhido na iteração $i$ e suponha que ele está no mesmo cluster que um vértice $u_j$ para algum $j=1,\ldots,i-1$. Então, $d(u_i,C) \leq 2r^*$, pois para cada $u_j$ a distância entre quaisquer dois vértices que estão no mesmo cluster que ele em $C^*$ é $\leq 2r^*$, assim se o vértice mais distante de $C_{i-1}$ tem distância no máximo $2r^*$ e a partir desse momento a distância de um vértice qualquer para $C$ apenas diminui, então $r\leq 2r^*$.
     \end{proof}
     Vamos mostrar que essa análise é justa, ou seja, existe uma instância $I(G,d,k)$ em que o algoritmo devolve uma solução $C$ tal que raio$(C) = 2 \opt(I)$. \\
@@ -220,16 +220,19 @@ O resultado acima pode ser adaptado para dar um resultado mais forte de inaproxi
       Claramente, o raio da resposta ótima dessa instância é 1 e inclui o vértice do centro da estrela como um dos centros de cluster. \\
       Note que se, no algoritmo guloso, o vértice escolhido arbitrariamente for algum dos vértices da ponta dessa estrela o vértice do centro nunca será escolhido. Assim, serão escolhidos apenas vértices da ponta da estrela e como temos mais que $k$ delas, sempre existirá um vértice ligado ao centro do seu cluster com uma aresta de distância 2.
 \newpage
+
+
+
 \subsection{Método do gargalo}
 Os chamados problemas de gargalo são aqueles definidos em grafos com pesos nas arestas tais que a resposta ótima é o peso de uma aresta. \\
 Para esse algoritmo será necessário saber o que é um conjunto independente de vértices.
 \begin{definition}
     Seja $G = (V,E)$ um grafo. Um conjunto $S \subseteq V$ é um conjunto \emph{independente} se não existe $e \in E$ que tenha ambos os extremos em $S$.
 \end{definition}
-Seja $I(G,d,k)$ uma instância do problema do $k$-centros. Vamos supor que as arestas $E = \{e_1,e_2,\ldots,e_{|E|}\}$ de $G$ estejam dispostas de forma que $d(e_i) \leq d(e_{i+1})$ para todo $i \in [|E|-1]$. Como sabemos que é possível ordenar em tempo polinomial, podemos assumir isso. \\
-Seja $E_i = \{e_1,e_2,\ldots,e_i\}$ e $G_i = (V,E_i)$. Seja também $i^*$ o menor $i$ tal que $G_i$ tem um $k$-conjunto dominante. Como $G$ é um completo, $i^*$ existe. Claramente $d(e_{i^*}) = \opt(I)$, porém não conseguimos encontrar $i^*$ eficientente, uma vez que não é possível saber se um grafo tem um $k$-conjunto dominante em tempo polinomial. Portanto, vamos usar um conjunto independente maximal para aproximar uma resposta.
+Seja $I(G,d,k)$ uma instância do problema dos $k$-centros. Vamos supor que as arestas $E = \{e_1,e_2,\ldots,e_{|E|}\}$ de $G$ estejam dispostas de forma que $d(e_i) \leq d(e_{i+1})$ para todo $i \in [|E|-1]$. Como sabemos que é possível ordenar em tempo polinomial, podemos assumir isso. \\
+Seja $E_i = \{e_1,e_2,\ldots,e_i\}$ e $G_i = (V,E_i)$. Seja também $i^*$ o menor $i$ tal que $G_i$ tem um $k$-conjunto dominante. Como $G$ é completo, $i^*$ existe. Claramente $d(e_{i^*}) = \opt(I)$, porém não conseguimos encontrar $i^*$ eficientemente, uma vez que não é possível saber se um grafo tem um $k$-conjunto dominante em tempo polinomial, a menos que $P = \NP$. Portanto, vamos usar um conjunto independente maximal para aproximar uma resposta.
 
-\begin{lemma}
+\begin{lemma}\label{lemma:2.7}
     Seja $G = (V,E)$ um grafo. Um conjunto independente maximal em $G$ é também um conjunto dominante.
 \end{lemma}
 \begin{proof}
@@ -246,8 +249,9 @@ Dada a definição vamos enunciar e provar um lema que nos ajudará no algoritmo
 \begin{proof}
     Vamos mostrar pela contrapositiva.\\
     Seja $G = (V,E)$ um grafo e $G^2$ o seu quadrado. Suponha que $G^2$ tem um conjunto independente maximal $S \subset V$ tal que $|S| > k$. Seja $D$ um conjunto dominante em $G$, vamos mostrar que $|D| > k$. \\
-    Por definição, não existe um caminho de tamanho $2$ ou uma aresta entre dois vértices de $S$ em $G$. Seja $u \in D$, vamos mostrar que $u$ cobre no máximo $1$ vértice de $S$. \\Se $u \in S$, o único vértice de $S$ coberto por $u$ é ele mesmo, uma vez que não existe aresta entre dois vértices de $S$ em $G$. \\
-    Se $u \not \in S$, $u$ pode cobrir apenas um vértice de $S$, caso cobrisse $2$, digamos $v$ e $w$, existiriam as arestas $uv$ e $uw$ e essas arestas formariam um caminho de tamanho $2$ de $v$ para $w$. Assim, $v$ e $w$ não podem pertencer a $S$ ao mesmo tempo. \\
+    Por definição, não existe um caminho de tamanho $2$ ou uma aresta entre dois vértices de $S$ em $G$. Seja $u \in D$, vamos mostrar que $u$ cobre no máximo $1$ vértice de $S$ em $G$. \\
+    Se $u \in S$, o único vértice de $S$ coberto por $u$ é ele mesmo, uma vez que não existe aresta entre dois vértices de $S$ em $G$. \\
+    Se $u \not \in S$, $u$ pode cobrir apenas um vértice de $S$, caso cobrisse $2$, digamos $v$ e $w$, existiriam as arestas $uv$ e $uw$ e essas arestas formariam um caminho de tamanho $2$ de $v$ para $w$. Assim, $vw$ é uma aresta em $G^2$ e $v$ e $w$ não podem pertencer a $S$ ao mesmo tempo. \\
     Portanto, $|D| \geq |S| > k$.
 \end{proof}
 Agora, temos todas as definições e lemas que serão necessário para nosso algoritmo.
@@ -266,12 +270,32 @@ Agora, temos todas as definições e lemas que serão necessário para nosso alg
 \end{algorithm}
 
 \begin{theorem}
-    O algoritmo {\sc gargalo}$(G,d,k)$ é uma $2$-aproximação do problema do $k$-centros.
+    O algoritmo {\sc gargalo}$(G,d,k)$ é uma $2$-aproximação do problema dos $k$-centros.
 \end{theorem}
 \begin{proof}
     Primeiro vamos mostrar que o algoritmo é polinomial. \\
-    Como $G_{i^*}$ tem um $k$-conjunto dominante, então o loop vai parar no máximo quando $i=i^*$, pois pelo Lema~\ref{lemma:2.9} qualquer conjunto independente maximal em $G_{i^*}$ encontrado terá tamanho pelo menos $k$.
-    Também é fácil mostrar que é possível encontrar um conjunto independente maximal em tempo polinomial, podemos começar com um vértice só e colocar arbitrariamente vértices que não sejam vizinhos.
+    Como $G_{i^*}$ tem um $k$-conjunto dominante, então o loop vai parar no máximo quando $i=i^*$, pois pelo Lema~\ref{lemma:2.9} qualquer conjunto independente maximal em $G_{i^*}$ encontrado terá tamanho no máximo $k$.
+    Também é fácil mostrar que é possível encontrar um conjunto independente maximal em tempo polinomial, um algoritmo simples que começa com um vértice arbitrário e colocamos um vértice que não é adjacente a nenhum vértice do conjunto independente até não ser mais possível é suficiente. \red{Faço um lema para abordar melhor?}\\
+    Agora, vamos mostrar que é uma $2$-aproximação. \\
+    Seja max$(H)$ o maior valor de uma aresta em um grafo $H$ com peso nas arestas. Seja $i'$ o valor de $i$ ao final do algoritmo e $M_{i'}$ a solução devolvida por ele. Como $M_{i'}$ é um conjunto independente maximal, então pelo Lema~\ref{lemma:2.7} ele é um $k$-conjunto dominante. Pela desigualdade triangular, é fácil notar que max$(G_{i'}^2) \leq 2$  max$(G_{i})$. \\Assim, max$(M_{i'}) \leq $ max$(G_{i'}^2) \leq 2$ max$(G_{i'}) \leq 2$ max$(G_{i^*})= 2 \opt(I)$. 
+\end{proof}
+
+\subsection{Inaproximabilidade}
+\begin{theorem}
+    Seja $\varepsilon \in (0,1]$. Não existe $(2-\varepsilon)$-aproximação para o problema dos $k$-centros.
+\end{theorem}
+\begin{proof}
+    Suponha que exista um algoritmo $A$ que é uma $(2-\varepsilon)$-aproximação para o problema dos $k$-centros em tempo polinomial. Seja $G = (V,E)$ um grafo e $I(G,k)$ uma instância do problema $k$-conjunto dominante. Vamos criar uma instância $I'(G',k,d)$ do problema dos $k$-centros a partir da instância I. A instância $I'$ tem grafo $G'(V,E')$ completo tal que, para todo $e \in E'$, \\
+    \[
+    d(e) = \begin{cases}
+            1, \text{ se } e \in E \\
+            2, \text{ caso contrário.} 
+            \end{cases}\]\\
+    Note que d satisfaz a desigualdade triangular.\\
+    O algortimo aplicado à instância I' encontra uma solução C. É fácil perceber que o conjunto $C$, dos centros de clusters, representa um conjunto dominante em $G'$ de tamanho $k$.\\
+    Se raio$(C)=1$ então todos os vértices estão ligados aos centros dos seus cluster com uma arestas de $G$, assim $C$ também é um conjunto dominante em $G$. \\ 
+    Se raio$(C)=2$, não existe uma solução $C'$ tal que raio$(C') = 1$, uma vez que o algoritmo $A$ garante uma solução com valor no máximo $(2-\varepsilon)\opt(I)$ e, caso existisse, $C$ não satisfaria essa cota. Assim, não existe $k$-conjunto dominante em $G$. \\ 
+    Portanto, conseguimos resolver em tempo polinomial o problema do $k$-conjunto dominante, o que é um absurdo.
 \end{proof}
 \newpage
 \bibliographystyle{plain}
